fix: Fixed AlertBanner flickering (#882)
* Handle race condition between updateStatus and response

* fix: Generalized Alertbar component and cleand up code

---------

--- a/plugins/ros/src/components/common/alertBar.module.css
+++ b/plugins/ros/src/components/common/alertBar.module.css
@@ -2,6 +2,7 @@
   position: sticky;
   top: 8px;
   z-index: 100;
+  display: block;
 }
 
 .alertBar {
